api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: node-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 5000
    - host: front-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-app
                port:
                  number: 3000
